src/assets/styles/cmps/_StationEdit.scss
.station-edit {
    position: absolute;
    top: 50%;
    left: 50%;
    translate: -50% -50%;


    background-color: #282828;
    border-radius: 0.5rem;



    header {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 1.5rem;

        span {
            cursor: pointer;
            display: grid;
            align-content: center;
            justify-content: center;

            height: 2rem;
            width: 2rem;
            border-radius: 50%;

            &:hover {
                background-color: #3e3e3e;
            }
        }

        h1 {
            font-size: 1.5rem;
            color: $clr2;
            font-family: CircularSpTitle;
        }
    }

    .edit {
        display: grid;
        grid-template: 2rem 8.25rem 2rem auto/11.25rem 17.5rem;
        grid-gap: 1rem;
        padding: 0 1.5rem 1.5rem;
    }

    .album-image,
    img {
        grid-row: 1 / span 2;
        grid-column: 1;
        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
        background-color: #282828;
    }

    input {
        grid-row: 1;
        grid-column: 2;
        color: $clr2;
        padding: 0rem 0.75rem;
        background-color: #FFFFFF1A;
        border: none;
        border-radius: 0.2rem;
        outline: none;

        &:focus {
            border: 1px solid lightgrey;
            background-color: #333333;
        }
    }

    textarea {
        grid-row: 2;
        grid-column: 2;
        padding: 0.5rem 0.5rem 1.75rem;
        resize: none;
        color: $clr2;
        background-color: #FFFFFF1A;
        border: none;
        border-radius: 0.2rem;
        outline: none;

        &:focus {
            border: 1px solid lightgrey;
            background-color: #333333;
        }

    }

    textarea::placeholder {
        font-size: 0.75rem;
        font-family: Circular;
    }


    .save-btn {
        grid-row: 3;
        grid-column: 2;
        justify-self: end;
        align-self: center;
        border-radius: 2em;
        background: #fff;
        padding: 0.5rem 2rem;

        font-weight: bold;
        font-family: Circular;
        font-size: 1rem;
        height: 3rem;
        border: none;

        &:hover {
            scale: 105%;
        }
    }

    .disclaimer {
        grid-row: 4;
        grid-column: 1 / span 2;
        color: white;
    }

    display: none;
}

body.modal-open .station-edit {
    display: grid;
}

